--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -1,15 +1,15 @@
 [package]
 cairo-version = "=2.8.4"
-name = "dojo_starter"
-version = "1.0.9"
+name = "nothing_game"
+version = "0.0.1"
 
 [cairo]
 sierra-replace-ids = true
 
 [scripts]
 migrate = "sozo build && sozo migrate"                      # scarb run migrate
-spawn = "sozo execute dojo_starter-actions spawn --wait"    # scarb run spawn
-move = "sozo execute dojo_starter-actions move -c 1 --wait" # scarb run move
+# spawn = "sozo execute nothing_game-actions spawn --wait"    # scarb run spawn
+# move = "sozo execute nothing_game-actions move -c 1 --wait" # scarb run move
 
 [dependencies]
 dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.9" }
