--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cartridge/connector": "^0.6.0",
+    "@cartridge/controller": "^0.6.0",
+    "@starknet-react/chains": "^3.1.2",
+    "@starknet-react/core": "^3.7.2",
     "next": "14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "starknet": "^6.23.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
@@ -22,6 +27,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "vite-plugin-mkcert": "^1.17.6"
   }
 }
