--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@cartridge/controller": "^0.6.0",
     "@starknet-react/chains": "^3.1.2",
     "@starknet-react/core": "^3.7.2",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
