--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@starknet-react/core": "^3.7.2",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
+    "graphql-ws": "^6.0.3",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
